# IFC-GPT

./: .env.example  .gitignore  CONTRIBUTING.md  INTEGRATION_PLAN.md  LICENSE  Procfile  README.md  TROUBLESHOOTING.md  conftest.py  main.py  pyproject.toml
.cursor/rules/: agent-code.mdc  global-conventions.mdc  ifc-building-correctness.mdc  ifc-semantic-validation.mdc  ifc-vertical-circulation.mdc  ifc-window-door-orientation.mdc  ifc.mdc  python.mdc  repo.mdc  validation-code.mdc
.cursor/skills/building-plan-schema/: SKILL.md  executor-logic.md
.cursor/skills/component-registry/: SKILL.md  registry-schema.yaml
.cursor/skills/ids-authoring/: SKILL.md
.cursor/skills/ifc-geometry/: SKILL.md  coordinate-diagrams.md
.cursor/skills/ifc-mcp-skills/: SKILL.md
.cursor/skills/ifc-project-master/: SKILL.md
.cursor/skills/langgraph-agent/: SKILL.md  state-schema.md  tool-governance.md
.cursor/skills/mcp-baseline/: SKILL.md  tool-surface-summary.md
.cursor/skills/project-setup/: SKILL.md
.cursor/skills/repair-strategy/: SKILL.md  error-taxonomy.md
.cursor/skills/validation-pipeline/: SKILL.md  ids-format-guide.md
.cursor/skills/workflow-full-pipeline/: SKILL.md
.cursor/skills/workflow-run-golden-tests/: SKILL.md
.cursor/skills/workflow-setup-env/: SKILL.md
.cursor/skills/workflow-validate-ifc/: SKILL.md
.github/workflows/: ci.yml  validate-ifc.yml
.github/workflows/scripts/: check_validation_results.py
.windsurf/rules/: agent-code.md  global-conventions.md  ifc-building-correctness.md  ifc-semantic-validation.md  ifc-vertical-circulation.md  ifc-window-door-orientation.md  ifc.md  python.md  repo.md  validation-code.md
.windsurf/skills/building-plan-schema/: SKILL.md  schema-examples.json
.windsurf/skills/component-registry/: SKILL.md
.windsurf/skills/ids-authoring/: SKILL.md  ids-v0-annotated.xml
.windsurf/skills/ifc-geometry/: SKILL.md
.windsurf/skills/ifc-mcp-skills/: skill.md  skills.md
.windsurf/workflows/: full-pipeline.md  run-golden-tests.md  setup-env.md  validate-ifc.md
agent/: graph.py  llm.py  prompts.py  repair.py  schemas.py
api/: server.py
components/: primitives.py  registry.yaml
docs/: LLM_ENV.md  PRODUCT_DEFINITION.md  api-reference.md  ifcopenshell_api_docs.txt
experiments/: MCPServerBenchmarking.xlsx  Scene_Querying_GPT5Mini.csv  Scene_Querying_Sonnet.csv
experiments/IFC Generation/: IFC_Generation1.ifc  IFC_Generation2.ifc  IFC_Generation3.ifc  IFC_Generation4.ifc  IFC_Generation5.ifc  IFC_Generation6.ifc  IFC_Generation_7.ifc
github_error_logs/: 2_Lint & Type-check.txt
ids/: v0.ids
scripts/: _check_container.py  _check_geom_api2.py  _check_ids_results.py  _check_ids_schema.py  _check_reset.py  _check_stair_api.py  _check_stair_geom.py  _debug_get_filled_void.py  _debug_ids_filling.py  _debug_ids_manual.py  _debug_ids_part_of.py  _debug_ids_part_of2.py  _debug_ids_part_of3.py  _debug_save.py  _debug_wall.py  _debug_wall2.py  _mcp_call.py  _multi_view.py  _nuke_ifc.py  _patch_container.py  _reset_scene.py  _set_storey.py  blender_load_mixed_use.py  build_mixed_use_mcp.py  build_mixed_use_v2.py  create_blend_template.py  embedding_server.py  generate_ifc_docs.py  generate_ifcopenshell_docs.py  generate_mcp_docs.py  init_knowledge_base.py  install.py  install_blender_packages.py  run_agent.py  verify_blender_addon.py
skills/project-setup/: SKILL.md
src/blender_addon/: __init__.py  commands.py  core.py  ui.py
src/blender_mcp/: __init__.py  mcp_instance.py  server.py
tests/: golden_test_mixed_use.py  golden_test_simple_room.py  golden_test_ten_storey.py  golden_test_two_storey.py  test_phase1.py  test_phase3.py  test_phase4.py  test_phase5.py
tests/output/: golden_mixed_use.ifc  golden_mixed_use_validation.json  golden_simple_room.ifc  golden_simple_room_validation.json  golden_ten_storey.ifc  golden_ten_storey_validation.json  golden_two_storey.ifc  golden_two_storey_validation.json
validate/: ids_validate.py  run_validation.py  schema_validate.py  semantic_checks.py
web/: next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: IFCViewer.tsx  VisualEditor.tsx
web/hooks/: usePascalEditor.ts
web/lib/: toPlanJSON.ts
workspace/: OFCE5A01.ifc  OFCTWR01.ifc  OFFC5STR.ifc  test_save.ifc
(+37 files in other folders)
